--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
+    ></script>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- Coolors Palette Widget -->
+    <script src="https://coolors.co/palette-widget/widget.js"></script>
+    <br />
+    <div class="palette" style="margin: 3rem;">
+      <h2 class="subtitle is-size-4">Color Palette</h2>
+      <script data-id="03530330742602448">
+        new CoolorsPaletteWidget('03530330742602448', [
+          '7400b8',
+          '6930c3',
+          '5e60ce',
+          '5390d9',
+          '4ea8de',
+          '48bfe3',
+          '56cfe1',
+          '64dfdf',
+          '72efdd',
+          '80ffdb'
+        ])
+      </script>
+    </div>
   </body>
 </html>
