--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,30 @@
         continue.</strong
       >
     </noscript>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: 'AIzaSyD2UeDDeRjFFnYy4UDZvyUcCWjDMQMBrxQ',
+        authDomain: 'roadmapfree.firebaseapp.com',
+        databaseURL: 'https://roadmapfree.firebaseio.com',
+        projectId: 'roadmapfree',
+        storageBucket: 'roadmapfree.appspot.com',
+        messagingSenderId: '601072791966',
+        appId: '1:601072791966:web:b18cb00ff61e0e5640e68f',
+        measurementId: 'G-E10WCJVW2H'
+      }
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig)
+      firebase.analytics()
+    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- Coolors Palette Widget -->
