--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Roadmap</title>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css"
+    />
+
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
@@ -19,30 +25,6 @@
         continue.</strong
       >
     </noscript>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-        apiKey: 'AIzaSyD2UeDDeRjFFnYy4UDZvyUcCWjDMQMBrxQ',
-        authDomain: 'roadmapfree.firebaseapp.com',
-        databaseURL: 'https://roadmapfree.firebaseio.com',
-        projectId: 'roadmapfree',
-        storageBucket: 'roadmapfree.appspot.com',
-        messagingSenderId: '601072791966',
-        appId: '1:601072791966:web:b18cb00ff61e0e5640e68f',
-        measurementId: 'G-E10WCJVW2H'
-      }
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig)
-      firebase.analytics()
-    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- Coolors Palette Widget -->
