GA data stream config

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,20 @@
       rel="stylesheet"
       href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YH841LCBB4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
+      gtag('config', 'G-YH841LCBB4')
+    </script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
